[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kube-lint-mcp"
version = "0.5.1"
description = "MCP server for Kubernetes manifest and Helm chart validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Artem Muterko", email = "artem@sopho.tech" },
]
keywords = ["kubernetes", "mcp", "helm", "fluxcd", "validation", "gitops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.23.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/sophotechlabs/kube-lint-mcp"
Repository = "https://github.com/sophotechlabs/kube-lint-mcp"
Issues = "https://github.com/sophotechlabs/kube-lint-mcp/issues"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--cov=src/kube_lint_mcp --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
